[package]
name = "convey"
version = "0.3.5"
authors = ["Ben Parli <bparli@gmail.com>"]
edition = "2018"

[dev-dependencies]
hyper = { version = "1.1.0", features = ["full"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }

[dependencies]
docopt = "1.1"
log = "0.4"
env_logger = "0.10.1"
serde_derive = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
toml = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
iron = "0.6"
router = "0.6"
rand = "0.8.5"
notify = "4.0"
hash_ring = { git = "https://github.com/martyncharler/rust-hash-ring", branch = "master" }
pnet = "0.34.0"
pnet_macros_support = "0.34.0"
lru_time_cache = "0.11.11"
socket2 = "0.3"
ipnetwork = "0.20.0"
